--- a/bibs/axiomatic2016.bib
+++ b/bibs/axiomatic2016.bib
@@ -9,7 +9,7 @@
   publisher = {ACM},
   site      = {Indianapolis, USA},
   title     = {{Axiomatic Result Re-Ranking}},
-  url       = {},
+  url       = {https://dl.acm.org/doi/pdf/10.1145/2983323.2983704},
   year      = {2016},
 }
 
