--- a/bibs/fremerey2019qomex.bib
+++ b/bibs/fremerey2019qomex.bib
@@ -9,5 +9,6 @@
   doi={10.1109/QoMEX.2019.8743307},
   ISSN={2472-7814},
   month={June},
+  url = {https://ieeexplore.ieee.org/document/8743307}
 }
 
