--- a/bibs/goering2017_81.bib
+++ b/bibs/goering2017_81.bib
@@ -8,5 +8,6 @@
   doi={10.1109/QoMEX.2017.7965640},
   month={May},
   poster = {./pdfs/2017/qomex_enc_poster.pdf},
+  url = {https://www.researchgate.net/publication/317616945_A_Framework_for_QoE_Analysis_of_Encrypted_Videos_Streams}
 }
 
