--- a/bibs/goering2019cencro.bib
+++ b/bibs/goering2019cencro.bib
@@ -6,6 +6,7 @@
     pages={1-8},
     volume={},
     month={Dec},
-    code={https://github.com/Telecommunication-Telemedia-Assessment/cencro}
+    code={https://github.com/Telecommunication-Telemedia-Assessment/cencro},
+    url={https://www.researchgate.net/publication/338200687_cencro_--_Speedup_of_Video_Quality_Calculation_using_Center_Cropping}
 }
 
