--- a/bibs/robitza2018measuring.bib
+++ b/bibs/robitza2018measuring.bib
@@ -4,6 +4,7 @@
   booktitle={Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
   pages={1--6},
   year={2018},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://www.researchgate.net/publication/325780662_Measuring_YouTube_QoE_with_ITU-T_P1203_under_Constrained_Bandwidth_Conditions}
 }
 
