--- a/bibs/singla2019.bib
+++ b/bibs/singla2019.bib
@@ -4,5 +4,6 @@
   booktitle = {10th ACM Multimedia Systems Conference},
   title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
   year = {2019},
+  url = {https://www.researchgate.net/publication/330106733_Subjective_Quality_Evaluation_of_Tile-based_Streaming_for_Omnidirectional_Videos}
  }
 
