--- a/bibs/singla2019vr.bib
+++ b/bibs/singla2019vr.bib
@@ -5,5 +5,6 @@
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
   month = mar,
+  url = {https://www.researchgate.net/publication/331071836_Assessing_Media_QoE_Simulator_Sickness_and_Presence_for_Omnidirectional_Videos_with_Different_Test_Protocols}
  }
 
