--- a/pub.bib
+++ b/pub.bib
@@ -42,7 +42,8 @@
   title     = {Capabilities and Objectives of Distributed Image Processing on Smart Camera Systems},
   year      = {2013},
   doi={10.1109/ISCC.2013.6755070},
-  pdf = {./pdfs/2013/golembewski-iscc-2013.pdf}
+  pdf = {./pdfs/2013/golembewski-iscc-2013.pdf},
+  url={https://ieeexplore.ieee.org/document/6755070}
 }
 
 @thesis{ma:2013,
@@ -108,7 +109,7 @@
   publisher = {ACM},
   site      = {Indianapolis, USA},
   title     = {{Axiomatic Result Re-Ranking}},
-  url       = {},
+  url       = {https://dl.acm.org/doi/pdf/10.1145/2983323.2983704},
   year      = {2016},
   pdf = {./pdfs/2016/axiomatic_result_re-ranking.pdf}
 }
@@ -122,7 +123,8 @@
   keywords={Adaptation models;Bit rate;Databases;Quality assessment;Streaming media;Video recording;HAS;HTTP Adaptive Streaming;Quality model;Quality of Experience;Standardization;Video quality},
   doi={10.1109/QoMEX.2017.7965631},
   month={May},
-  pdf = {./pdfs/2017/Qomex2017_Raake_CameraReady.pdf}
+  pdf = {./pdfs/2017/Qomex2017_Raake_CameraReady.pdf},
+  url = {https://www.researchgate.net/publication/317368539_A_bitstream-based_scalable_video-quality_model_for_HTTP_adaptive_streaming_ITU-T_P12031}
 }
 
 @inproceedings{goering2017_81,
@@ -137,6 +139,7 @@
   pdf = {./pdfs/2017/qomex_enc_paper.pdf},
   poster = {./pdfs/2017/qomex_enc_poster.pdf},
   slides = {./pdfs/2017/qomex_enc_slides.pdf},
+  url = {https://www.researchgate.net/publication/317616945_A_Framework_for_QoE_Analysis_of_Encrypted_Videos_Streams}
 }
 
 @article{goering2018,
@@ -145,20 +148,21 @@
   title={DeViQ -- A deep no reference video quality model},
   year={2018},
   pdf = {./pdfs/2018/deviq_paper.pdf},
-  slides = {./pdfs/2018/deviq_slides.pdf}
+  slides = {./pdfs/2018/deviq_slides.pdf},
+  url = {https://www.researchgate.net/publication/322869205_DeViQ_-_A_deep_no_reference_video_quality_model}
 }
 
 @INPROCEEDINGS{Gori1805:Extended,
   author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
-  title="Extended Features using Machine Learning Techniques for Photo Liking
-  Prediction",
+  title="Extended Features using Machine Learning Techniques for Photo Liking Prediction",
   booktitle="Tenth International Conference on Quality of Multimedia Experience (QoMEX)",
   address="Sardinia, Italy",
   days=28,
   month=5,
   year={2018},
   pdf={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf},
-  slides={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf}
+  slides={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf},
+  url={https://www.researchgate.net/publication/325479182_Extended_Features_using_Machine_Learning_Techniques_for_Photo_Liking_Prediction}
 }
 
 
@@ -168,7 +172,8 @@
   booktitle={Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
   pages={1--6},
   year={2018},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://www.researchgate.net/publication/325780662_Measuring_YouTube_QoE_with_ITU-T_P1203_under_Constrained_Bandwidth_Conditions}
 }
 
 @inproceedings{Robitza2017d,
@@ -179,7 +184,8 @@
  isbn = {9781450351928},
  title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software}},
  year = {2018},
- code={https://github.com/itu-p1203}
+ code={https://github.com/itu-p1203},
+ url={https://www.researchgate.net/publication/325780595_HTTP_adaptive_streaming_QoE_estimation_with_ITU-T_rec_P_1203_open_databases_and_software}
  }
 
 @inproceedings{goering2018Deimeq,
@@ -222,7 +228,7 @@ No-reference Image Quality Model},
   url={https://www.ingentaconnect.com/content/ist/ei/pre-prints/content-ei2019-hvei-215;jsessionid=3hkwbc6tro23a.x-ic-live-01#Cits},
   year={2019},
   pdf={./pdfs/2019/uhd_hd_paper.pdf},
-  slides={./pdfs/2019/uhd_hd_paper_slides.pdf}
+  slides={./pdfs/2019/uhd_hd_paper_slides.pdf},
 }
 
 @inproceedings{singla2019,
@@ -231,6 +237,7 @@ No-reference Image Quality Model},
   booktitle = {10th ACM Multimedia Systems Conference},
   title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
   year = {2019},
+  url = {https://www.researchgate.net/publication/330106733_Subjective_Quality_Evaluation_of_Tile-based_Streaming_for_Omnidirectional_Videos}
  }
 
 @inproceedings{singla2019vr,
@@ -240,6 +247,7 @@ No-reference Image Quality Model},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
   month = mar,
+  url = {https://www.researchgate.net/publication/331071836_Assessing_Media_QoE_Simulator_Sickness_and_Presence_for_Omnidirectional_Videos_with_Different_Test_Protocols}
  }
 
 @inproceedings{fremerey2019qomex,
@@ -253,6 +261,7 @@ No-reference Image Quality Model},
   doi={10.1109/QoMEX.2019.8743307},
   ISSN={2472-7814},
   month={June},
+  url = {https://ieeexplore.ieee.org/document/8743307}
 }
 
 @inproceedings{goering2019qomex,
@@ -279,7 +288,7 @@ No-reference Image Quality Model},
   booktitle={8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
-  %url={https://ieeexplore.ieee.org/document/TBD},
+  url={https://ieeexplore.ieee.org/document/8946162},
   organization={IEEE},
   demo={https://git.io/Je0ip},
   code={https://github.com/Telecommunication-Telemedia-Assessment/image_compression},
@@ -293,7 +302,8 @@ No-reference Image Quality Model},
     year = {2019},
     pages={1-8},
     volume={},
-    month={Dec}
+    month={Dec},
+    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1}
 }
 
 @inproceedings{goering2019cencro,
@@ -305,7 +315,8 @@ No-reference Image Quality Model},
     volume={},
     month={Dec},
     slides={./pdfs/2019/cencro_presentation.pdf},
-    code={https://github.com/Telecommunication-Telemedia-Assessment/cencro}
+    code={https://github.com/Telecommunication-Telemedia-Assessment/cencro},
+    url={https://www.researchgate.net/publication/338200687_cencro_--_Speedup_of_Video_Quality_Calculation_using_Center_Cropping}
 }
 
 @inproceedings{robitza2020,
