--- a/bibs/Gole1307_Capabilities.bib
+++ b/bibs/Gole1307_Capabilities.bib
@@ -9,5 +9,6 @@
   title     = {Capabilities and Objectives of Distributed Image Processing on Smart Camera Systems},
   year      = {2013},
   doi={10.1109/ISCC.2013.6755070},
+  url={https://ieeexplore.ieee.org/document/6755070}
 }
 
