--- a/bibs/goering2018.bib
+++ b/bibs/goering2018.bib
@@ -3,5 +3,6 @@
   journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={DeViQ -- A deep no reference video quality model},
   year={2018},
+  url = {https://www.researchgate.net/publication/322869205_DeViQ_-_A_deep_no_reference_video_quality_model}
 }
 
