--- a/bibs/raake2017_71.bib
+++ b/bibs/raake2017_71.bib
@@ -7,5 +7,6 @@
   keywords={Adaptation models;Bit rate;Databases;Quality assessment;Streaming media;Video recording;HAS;HTTP Adaptive Streaming;Quality model;Quality of Experience;Standardization;Video quality},
   doi={10.1109/QoMEX.2017.7965631},
   month={May},
+  url = {https://www.researchgate.net/publication/317368539_A_bitstream-based_scalable_video-quality_model_for_HTTP_adaptive_streaming_ITU-T_P12031}
 }
 
