--- a/bibs/rao2019Db.bib
+++ b/bibs/rao2019Db.bib
@@ -5,6 +5,7 @@
     year = {2019},
     pages={1-8},
     volume={},
-    month={Dec}
+    month={Dec},
+    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1}
 }
 
