--- a/pub.bib
+++ b/pub.bib
@@ -353,3 +353,42 @@ No-reference Image Quality Model},
   slides={./pdfs/2020/prenc_presentation.pdf},
   video={./pdfs/2020/prenc_video.mp4}
 }
+
+@inproceedings{rao2020p1204_3gaming,
+  title={A Large-scale Evaluation of the bitstream-based video-quality model
+ITU-T P.1204.3 on Gaming Content},
+  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Fremerey, Stephan and Raake, Alexander},
+  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{fremerey2020models,
+  title={Subjective Test Dataset and Meta-data-based Models for 360{$^\circ$} Streaming Video Quality},
+  author={Fremerey, Stephan and G\"oring, Steve and {Rao Ramachandra Rao}, Rakesh and  Huang, Rachel and Raake, Alexander},
+  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{goering2020_genre,
+  title={Automated Genre Classification for Gaming Videos},
+  author={G\"oring, Steve and Steger, Robert and {Rao Ramachandra Rao}, Rakesh and Raake, Alexander},
+  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{zadtootaghaj2020_demi,
+  title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
+  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and M{\"o}ller, Sebastian  },
+  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+
