--- a/bibs/rao2020p1204_3gaming.bib
+++ b/bibs/rao2020p1204_3gaming.bib
@@ -1,7 +1,7 @@
 @inproceedings{rao2020p1204_3gaming,
   title={A Large-scale Evaluation of the bitstream-based video-quality model
 ITU-T P.1204.3 on Gaming Content},
-  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Fremerey, Stephan and Raake, Alexander},
+  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Barman, Nabajeet and Fremerey, Stephan and Möller, Sebastian and Raake, Alexander},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
