--- a/bibs/zadtootaghaj2020_demi.bib
+++ b/bibs/zadtootaghaj2020_demi.bib
@@ -1,6 +1,6 @@
 @inproceedings{zadtootaghaj2020_demi,
   title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
-  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and M{\"o}ller, Sebastian  },
+  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and Raake, Alexander and M{\"o}ller, Sebastian  },
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
