--- a/pub.bib
+++ b/pub.bib
@@ -357,7 +357,7 @@ No-reference Image Quality Model},
 @inproceedings{rao2020p1204_3gaming,
   title={A Large-scale Evaluation of the bitstream-based video-quality model
 ITU-T P.1204.3 on Gaming Content},
-  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Fremerey, Stephan and Raake, Alexander},
+  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Barman, Nabajeet and Fremerey, Stephan and Möller, Sebastian and Raake, Alexander},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
@@ -384,7 +384,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{zadtootaghaj2020_demi,
   title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
-  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and M{\"o}ller, Sebastian  },
+  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and Raake, Alexander and M{\"o}ller, Sebastian  },
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
