--- a/bibs/fremerey2020models.bib
+++ b/bibs/fremerey2020models.bib
@@ -1,6 +1,6 @@
 @inproceedings{fremerey2020models,
   title={Subjective Test Dataset and Meta-data-based Models for 360{$^\circ$} Streaming Video Quality},
-  author={Fremerey, Stephan and G\"oring, Steve and {Rao Ramachandra Rao}, Rakesh and  Huang, Rachel and Raake, Alexander},
+  author={Stephan Fremerey and Steve G\"oring and Rakesh {Rao Ramachandra Rao} and  Rachel Huang and Alexander Raake},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
