--- a/bibs/goering2020_genre.bib
+++ b/bibs/goering2020_genre.bib
@@ -1,6 +1,6 @@
 @inproceedings{goering2020_genre,
   title={Automated Genre Classification for Gaming Videos},
-  author={G\"oring, Steve and Steger, Robert and {Rao Ramachandra Rao}, Rakesh and Raake, Alexander},
+  author={Steve G\"oring and Robert Steger and Rakesh {Rao Ramachandra Rao} and  Alexander Raake},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
