--- a/pub.bib
+++ b/pub.bib
@@ -357,7 +357,7 @@ No-reference Image Quality Model},
 @inproceedings{rao2020p1204_3gaming,
   title={A Large-scale Evaluation of the bitstream-based video-quality model
 ITU-T P.1204.3 on Gaming Content},
-  author={{Rao Ramachandra Rao}, Rakesh and G\"oring, Steve and Steger, Robert and Zadtootaghaj, Saman and Barman, Nabajeet and Fremerey, Stephan and Möller, Sebastian and Raake, Alexander},
+  author={Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Robert Steger and  Saman Zadtootaghaj and Nabajeet Barman and Stephan Fremerey and Sebastian Möller and Alexander Raake},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
@@ -366,7 +366,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{fremerey2020models,
   title={Subjective Test Dataset and Meta-data-based Models for 360{$^\circ$} Streaming Video Quality},
-  author={Fremerey, Stephan and G\"oring, Steve and {Rao Ramachandra Rao}, Rakesh and  Huang, Rachel and Raake, Alexander},
+  author={Stephan Fremerey and Steve G\"oring and Rakesh {Rao Ramachandra Rao} and  Rachel Huang and Alexander Raake},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
@@ -375,7 +375,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{goering2020_genre,
   title={Automated Genre Classification for Gaming Videos},
-  author={G\"oring, Steve and Steger, Robert and {Rao Ramachandra Rao}, Rakesh and Raake, Alexander},
+  author={Steve G\"oring and Robert Steger and Rakesh {Rao Ramachandra Rao} and  Alexander Raake},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
@@ -384,7 +384,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{zadtootaghaj2020_demi,
   title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
-  author={Zadtootaghaj, Saman and Barman, Nabajeet and {Rao Ramachandra Rao}, Rakesh and  G{\"o}ring, Steve and Martini, {Maria G.} and Raake, Alexander and M{\"o}ller, Sebastian  },
+  author={Saman Zadtootaghaj and Nabajeet Barman and Rakesh {Rao Ramachandra Rao} and Steve G{\"o}ring and {Maria G.} Martini and Alexander Raake and Sebastian M{\"o}ller},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
