--- a/bibs/goering2020_genre.bib
+++ b/bibs/goering2020_genre.bib
@@ -4,6 +4,7 @@
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  video={./pdfs/2020/gaming_genre_video.mp4}
 }
 
