--- a/pub.bib
+++ b/pub.bib
@@ -379,7 +379,9 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  slides={./pdfs/2020/gaming_genre_presentation.pdf},
+  video={./pdfs/2020/gaming_genre_video.mp4}
 }
 
 @inproceedings{zadtootaghaj2020_demi,
