--- a/pub.bib
+++ b/pub.bib
@@ -393,4 +393,13 @@ ITU-T P.1204.3 on Gaming Content},
   organization={IEEE}
 }
 
+@inproceedings{fremerey2020fps,
+    author = {Stephan Fremerey and Frank Hofmeyer and Steve G\"oring and Dominik Keller  and Alexander Raake},
+    title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360$^\circ$ Video Quality},
+    booktitle={22st IEEE International Symposium on Multimedia (IEEE ISM)},
+    year = {2020},
+    pages={1-8},
+    volume={},
+    month=Dec
+}
 
