--- a/bibs/fremerey2020fps.bib
+++ b/bibs/fremerey2020fps.bib
@@ -1,6 +1,6 @@
 @inproceedings{fremerey2020fps,
     author = {Stephan Fremerey and Frank Hofmeyer and Steve G\"oring and Dominik Keller  and Alexander Raake},
-    title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360$^\circ$ Video Quality},
+    title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360° Video Quality},
     booktitle={22st IEEE International Symposium on Multimedia (IEEE ISM)},
     year = {2020},
     pages={1-8},
