--- a/pub.bib
+++ b/pub.bib
@@ -395,7 +395,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{fremerey2020fps,
     author = {Stephan Fremerey and Frank Hofmeyer and Steve G\"oring and Dominik Keller  and Alexander Raake},
-    title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360$^\circ$ Video Quality},
+    title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360° Video Quality},
     booktitle={22st IEEE International Symposium on Multimedia (IEEE ISM)},
     year = {2020},
     pages={1-8},
@@ -403,3 +403,12 @@ ITU-T P.1204.3 on Gaming Content},
     month=Dec
 }
 
+@article{raake2020p1204,
+  title={Multi-model standard for bitstream-, pixel-based and hybrid video quality assessment of UHD/4K: ITU-T P.1204},
+  author={Alexander Raake and Silvio Borer and Shahid Satti and J\"{o}rgen Gustafsson and Rakesh {Rao Ramachandra Rao} and Stefano Medagli and Peter List and Steve G\"{o}ring and David Lindero and Werner Robitza and Gunnar Heikkil\"{a} and Simon Broom and Christian Schmidmer and Bernhard Feiten and Ulf W\"{u}stenhagen and Thomas Wittmann and Matthias Obermann and Roland Bitto},
+  journal={IEEE Access},
+  volume={},
+  pages={},
+  year={2020},
+  publisher={IEEE}
+}
