--- a/pub.bib
+++ b/pub.bib
@@ -407,8 +407,10 @@ ITU-T P.1204.3 on Gaming Content},
   title={Multi-model standard for bitstream-, pixel-based and hybrid video quality assessment of UHD/4K: ITU-T P.1204},
   author={Alexander Raake and Silvio Borer and Shahid Satti and J\"{o}rgen Gustafsson and Rakesh {Rao Ramachandra Rao} and Stefano Medagli and Peter List and Steve G\"{o}ring and David Lindero and Werner Robitza and Gunnar Heikkil\"{a} and Simon Broom and Christian Schmidmer and Bernhard Feiten and Ulf W\"{u}stenhagen and Thomas Wittmann and Matthias Obermann and Roland Bitto},
   journal={IEEE Access},
-  volume={},
-  pages={},
+  volume={8},
+  pages={193020-193049},
   year={2020},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/ACCESS.2020.3032080},
+  url={https://ieeexplore.ieee.org/document/9234526?source=authoralert}
 }
