change th to nd

--- a/pub.bib
+++ b/pub.bib
@@ -376,7 +376,7 @@ ITU-T P.1204.3 on Gaming Content},
 @inproceedings{goering2020_genre,
   title={Automated Genre Classification for Gaming Videos},
   author={Steve G\"oring and Robert Steger and Rakesh {Rao Ramachandra Rao} and  Alexander Raake},
-  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
   organization={IEEE},
@@ -387,7 +387,7 @@ ITU-T P.1204.3 on Gaming Content},
 @inproceedings{zadtootaghaj2020_demi,
   title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
   author={Saman Zadtootaghaj and Nabajeet Barman and Rakesh {Rao Ramachandra Rao} and Steve G{\"o}ring and {Maria G.} Martini and Alexander Raake and Sebastian M{\"o}ller},
-  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
   organization={IEEE}
@@ -396,7 +396,7 @@ ITU-T P.1204.3 on Gaming Content},
 @inproceedings{fremerey2020fps,
     author = {Stephan Fremerey and Frank Hofmeyer and Steve G\"oring and Dominik Keller  and Alexander Raake},
     title = {Between the Frames - Evaluation of Various Motion Interpolation Algorithms to Improve 360° Video Quality},
-    booktitle={22st IEEE International Symposium on Multimedia (IEEE ISM)},
+    booktitle={22nd IEEE International Symposium on Multimedia (IEEE ISM)},
     year = {2020},
     pages={1-8},
     volume={},
