--- a/bibs/goering2020_genre.bib
+++ b/bibs/goering2020_genre.bib
@@ -1,7 +1,7 @@
 @inproceedings{goering2020_genre,
   title={Automated Genre Classification for Gaming Videos},
   author={Steve G\"oring and Robert Steger and Rakesh {Rao Ramachandra Rao} and  Alexander Raake},
-  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
   organization={IEEE},
