--- a/bibs/zadtootaghaj2020_demi.bib
+++ b/bibs/zadtootaghaj2020_demi.bib
@@ -1,7 +1,7 @@
 @inproceedings{zadtootaghaj2020_demi,
   title={DEMI: Deep Video Quality Estimation Model using Perceptual Video Quality Dimensions},
   author={Saman Zadtootaghaj and Nabajeet Barman and Rakesh {Rao Ramachandra Rao} and Steve G{\"o}ring and {Maria G.} Martini and Alexander Raake and Sebastian M{\"o}ller},
-  booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
+  booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
   organization={IEEE}
