--- a/pub.bib
+++ b/pub.bib
@@ -414,3 +414,15 @@ ITU-T P.1204.3 on Gaming Content},
   doi={10.1109/ACCESS.2020.3032080},
   url={https://ieeexplore.ieee.org/document/9234526?source=authoralert}
 }
+
+@article{goering2021pixel,
+  title={Modular Framework and Instances of Pixel-based Video Quality Models for UHD-1/4K},
+  author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Bernhard Feiten and Alexander Raake},
+  journal={IEEE Access},
+  volume={9},
+  pages={25},
+  year={2021},
+  publisher={IEEE},
+  doi={10.1109/ACCESS.2021.3059932},
+  url={https://ieeexplore.ieee.org/document/9355144}
+}
