--- a/bibs/goering2021pixel.bib
+++ b/bibs/goering2021pixel.bib
@@ -3,7 +3,7 @@
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Bernhard Feiten and Alexander Raake},
   journal={IEEE Access},
   volume={9},
-  pages={25},
+  pages={31842-31864},
   year={2021},
   publisher={IEEE},
   doi={10.1109/ACCESS.2021.3059932},
