update urls for some papers

--- a/bibs/fremerey2020fps.bib
+++ b/bibs/fremerey2020fps.bib
@@ -5,6 +5,7 @@
     year = {2020},
     pages={1-8},
     volume={},
-    month=Dec
+    month=Dec,
+    url={https://ieeexplore.ieee.org/document/9327980}
 }
 
