--- a/bibs/fremerey2020models.bib
+++ b/bibs/fremerey2020models.bib
@@ -4,6 +4,7 @@
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/document/9287065}
 }
 
