--- a/bibs/goering2020_genre.bib
+++ b/bibs/goering2020_genre.bib
@@ -5,6 +5,7 @@
   pages={1--6},
   year={2020},
   organization={IEEE},
-  video={./pdfs/2020/gaming_genre_video.mp4}
+  video={./pdfs/2020/gaming_genre_video.mp4},
+  url={https://ieeexplore.ieee.org/document/9287122}
 }
 
