--- a/pub.bib
+++ b/pub.bib
@@ -370,7 +370,8 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle={2020 IEEE 22st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/document/9287065}
 }
 
 @inproceedings{goering2020_genre,
@@ -381,7 +382,8 @@ ITU-T P.1204.3 on Gaming Content},
   year={2020},
   organization={IEEE},
   slides={./pdfs/2020/gaming_genre_presentation.pdf},
-  video={./pdfs/2020/gaming_genre_video.mp4}
+  video={./pdfs/2020/gaming_genre_video.mp4},
+  url={https://ieeexplore.ieee.org/document/9287122}
 }
 
 @inproceedings{zadtootaghaj2020_demi,
@@ -390,7 +392,8 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   year={2020},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/document/9287080}
 }
 
 @inproceedings{fremerey2020fps,
@@ -400,7 +403,8 @@ ITU-T P.1204.3 on Gaming Content},
     year = {2020},
     pages={1-8},
     volume={},
-    month=Dec
+    month=Dec,
+    url={https://ieeexplore.ieee.org/document/9327980}
 }
 
 @article{raake2020p1204,
