--- a/pub.bib
+++ b/pub.bib
@@ -415,6 +415,13 @@ ITU-T P.1204.3 on Gaming Content},
   url={https://ieeexplore.ieee.org/document/9234526?source=authoralert}
 }
 
+@inproceedings{rao2021meta,
+  author={Rakesh {Rao Ramachandra Rao} and Steve Göring and Alexander Raake},
+  journal = "Electronic Imaging, Human Vision Electronic Imaging",
+  title={Enhancement of Pixel-based Video Quality Models using Meta-data},
+  year={2021}
+}
+
 @article{goering2021pixel,
   title={Modular Framework and Instances of Pixel-based Video Quality Models for UHD-1/4K},
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Bernhard Feiten and Alexander Raake},
