add missing paper

--- a/pub.bib
+++ b/pub.bib
@@ -437,3 +437,10 @@ ITU-T P.1204.3 on Gaming Content},
   doi={10.1109/ACCESS.2021.3059932},
   url={https://ieeexplore.ieee.org/document/9355144}
 }
+
+@inproceedings{singla2021,
+  title={Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos},
+  author={Singla, Ashutosh and G{\"o}ring, Steve and Keller, Dominik and Rao, Rakesh Rao Ramachandra and Fremerey, Stephan and Raake, Alexander},
+  year={2021},
+  booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)}
+}
