--- a/pub.bib
+++ b/pub.bib
@@ -442,5 +442,6 @@ ITU-T P.1204.3 on Gaming Content},
   title={Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos},
   author={Singla, Ashutosh and G{\"o}ring, Steve and Keller, Dominik and Rao, Rakesh Rao Ramachandra and Fremerey, Stephan and Raake, Alexander},
   year={2021},
-  booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)}
+  booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)},
+  url={https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf}
 }
