add code to paper

--- a/pub.bib
+++ b/pub.bib
@@ -436,7 +436,8 @@ ITU-T P.1204.3 on Gaming Content},
   year={2021},
   publisher={IEEE},
   doi={10.1109/ACCESS.2021.3059932},
-  url={https://ieeexplore.ieee.org/document/9355144}
+  url={https://ieeexplore.ieee.org/document/9355144},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/pixelmodels}
 }
 
 @inproceedings{singla2021,
