--- a/bibs/goering2021pixel.bib
+++ b/bibs/goering2021pixel.bib
@@ -7,6 +7,7 @@
   year={2021},
   publisher={IEEE},
   doi={10.1109/ACCESS.2021.3059932},
-  url={https://ieeexplore.ieee.org/document/9355144}
+  url={https://ieeexplore.ieee.org/document/9355144},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/pixelmodels}
 }
 
