--- a/bibs/rao2019Db.bib
+++ b/bibs/rao2019Db.bib
@@ -6,6 +6,7 @@
     pages={1-8},
     volume={},
     month={Dec},
-    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1}
+    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1},
+    code={https://github.com/Telecommunication-Telemedia-Assessment/AVT-VQDB-UHD-1}
 }
 
