--- a/bibs/rao2020p1204.bib
+++ b/bibs/rao2020p1204.bib
@@ -6,6 +6,7 @@
   days=26,
   month=May,
   year=2020,
-  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation}
+  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/bitstream_mode3_p1204_3}
 }
 
