--- a/pub.bib
+++ b/pub.bib
@@ -303,7 +303,8 @@ No-reference Image Quality Model},
     pages={1-8},
     volume={},
     month={Dec},
-    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1}
+    url={https://www.researchgate.net/publication/338201010_AVT-VQDB-UHD-1_A_Large_Scale_Video_Quality_Database_for_UHD-1},
+    code={https://github.com/Telecommunication-Telemedia-Assessment/AVT-VQDB-UHD-1}
 }
 
 @inproceedings{goering2019cencro,
@@ -338,7 +339,8 @@ No-reference Image Quality Model},
   days=26,
   month=May,
   year=2020,
-  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation}
+  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/bitstream_mode3_p1204_3}
 }
 
 @inproceedings{goering2020prenc,
