--- a/pub.bib
+++ b/pub.bib
@@ -449,3 +449,26 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)},
   url={https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf}
 }
+
+
+@inproceedings{robitza2021siti,
+  author={Werner Robitza and Rakesh {Rao Ramachandra Rao} and Steve {G{\"o}ring} and Alexander Raake},
+  title="Impact of Spatial and Temporal Information on Video Quality and Compressibility",
+  booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
+  year={2021},
+}
+
+
+@inproceedings{keller2021groove,
+  author={Dominik Keller and Markus Vaalgamaa and Erkki Paajanen and Rakesh {Rao Ramachandra Rao} and Steve {G{\"o}ring} and Alexander Raake},
+  title="Groovability: Using Groove as a Novel Measure for Audio QoE with the Example of Smartphones",
+  booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
+  year={2021},
+}
+
+@inproceedings{rao2021crowdvideo,
+  author={Rakesh {Rao Ramachandra Rao} and Steve {G{\"o}ring} and Alexander Raake},
+  title="Towards High Resolution Video Quality Assessment in the Crowd",
+  booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
+  year={2021},
+}
