--- a/pub.bib
+++ b/pub.bib
@@ -93,7 +93,7 @@
   publisher = {CLEF and CEUR-WS.org},
   series    = {CEUR Workshop Proceedings},
   title     = {{Towards Data Submissions for Shared Tasks: First Experiences for the Task of Text Alignment}},
-  url       = {http://www.clef-initiative.eu/publication/working-notes},
+  url       = {http://ceur-ws.org/Vol-1391/inv-pap11-CR.pdf},
   year      = {2015},
   pdf = {./pdfs/2015/pan-text-alignment.pdf}
 }
