--- a/pub.bib
+++ b/pub.bib
@@ -472,3 +472,22 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
   year={2021},
 }
+
+@inproceedings{goering2021rules,
+  author={Steve {G{\"o}ring} and Alexander Raake},
+  title="Rule of Thirds and Simplicity for Image Aesthetics using Deep Neural Networks",
+  year={2021},
+  booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  organization={IEEE}
+}
+
+@inproceedings{goering2021voyager,
+  title={AVRate Voyager: an open source online testing platform},
+  author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Stephan Fremerey and Alexander Raake},
+  year={2021},
+  booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
+  pages={1--6},
+  organization={IEEE},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager}
+}
