--- a/pub.bib
+++ b/pub.bib
@@ -444,7 +444,7 @@ ITU-T P.1204.3 on Gaming Content},
 
 @inproceedings{singla2021,
   title={Assessment of the Simulator Sickness Questionnaire for Omnidirectional Videos},
-  author={Singla, Ashutosh and G{\"o}ring, Steve and Keller, Dominik and Rao, Rakesh Rao Ramachandra and Fremerey, Stephan and Raake, Alexander},
+  author={Ashutosh Singla and Steve G{\"o}ring and Dominik Keller and Rakesh Rao Ramachandra Rao and Stephan Fremerey and  Alexander Raake},
   year={2021},
   booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)},
   url={https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf}
