add videos and slides for two of my talks

--- a/bibs/goering2021rules.bib
+++ b/bibs/goering2021rules.bib
@@ -4,6 +4,8 @@
   year={2021},
   booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
-  organization={IEEE}
+  organization={IEEE},
+  video={./pdfs/2021/rules_video.mp4},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction}
 }
 
