--- a/bibs/goering2021voyager.bib
+++ b/bibs/goering2021voyager.bib
@@ -5,5 +5,6 @@
   booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   organization={IEEE},
-  code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager}
+  code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager},
+  video={./pdfs/2021/avrate_voyager_video.mp4}
 }
