--- a/pub.bib
+++ b/pub.bib
@@ -479,7 +479,10 @@ ITU-T P.1204.3 on Gaming Content},
   year={2021},
   booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
-  organization={IEEE}
+  organization={IEEE},
+  slides={./pdfs/2021/rules_presentation.pdf},
+  video={./pdfs/2021/rules_video.mp4},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction}
 }
 
 @inproceedings{goering2021voyager,
@@ -489,5 +492,7 @@ ITU-T P.1204.3 on Gaming Content},
   booktitle={2021 IEEE 23st International Workshop on Multimedia Signal Processing (MMSP)},
   pages={1--6},
   organization={IEEE},
-  code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager}
+  code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager},
+  slides={./pdfs/2021/avrate_voyager_presentation.pdf},
+  video={./pdfs/2021/avrate_voyager_video.mp4}
 }
