--- a/bibs/rao2021crowdvideo.bib
+++ b/bibs/rao2021crowdvideo.bib
@@ -3,5 +3,6 @@
   title="Towards High Resolution Video Quality Assessment in the Crowd",
   booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
   year={2021},
+  url={https://ieeexplore.ieee.org/document/9465425}
 }
 
