--- a/pub.bib
+++ b/pub.bib
@@ -471,6 +471,7 @@ ITU-T P.1204.3 on Gaming Content},
   title="Towards High Resolution Video Quality Assessment in the Crowd",
   booktitle="13th International Conference on Quality of Multimedia Experience (QoMEX)",
   year={2021},
+  url={https://ieeexplore.ieee.org/document/9465425}
 }
 
 @inproceedings{goering2021rules,
