--- a/bibs/goering2021rules.bib
+++ b/bibs/goering2021rules.bib
@@ -6,6 +6,7 @@
   pages={1--6},
   organization={IEEE},
   video={./pdfs/2021/rules_video.mp4},
-  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction}
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction},
+  url={https://ieeexplore.ieee.org/document/9733554}
 }
 
