--- a/bibs/goering2021voyager.bib
+++ b/bibs/goering2021voyager.bib
@@ -6,5 +6,6 @@
   pages={1--6},
   organization={IEEE},
   code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager},
-  video={./pdfs/2021/avrate_voyager_video.mp4}
+  video={./pdfs/2021/avrate_voyager_video.mp4},
+  url={https://ieeexplore.ieee.org/document/9733561}
 }
