--- a/bibs/rao2019.bib
+++ b/bibs/rao2019.bib
@@ -3,7 +3,7 @@
   journal = "Electronic Imaging",
   title={Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203},
   year={2019},
-  url={https://ist.publisher.ingentaconnect.com/contentone/ist/ei/2019/00002019/00000010/art00015}
+  url={https://www.ingentaconnect.com/content/ist/ei/2019/00002019/00000010/art00015}
 }
 
 
