--- a/pub.bib
+++ b/pub.bib
@@ -483,7 +483,8 @@ ITU-T P.1204.3 on Gaming Content},
   organization={IEEE},
   slides={./pdfs/2021/rules_presentation.pdf},
   video={./pdfs/2021/rules_video.mp4},
-  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction}
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction},
+  url={https://ieeexplore.ieee.org/document/9733554}
 }
 
 @inproceedings{goering2021voyager,
@@ -495,5 +496,6 @@ ITU-T P.1204.3 on Gaming Content},
   organization={IEEE},
   code={https://github.com/Telecommunication-Telemedia-Assessment/AVrateVoyager},
   slides={./pdfs/2021/avrate_voyager_presentation.pdf},
-  video={./pdfs/2021/avrate_voyager_video.mp4}
+  video={./pdfs/2021/avrate_voyager_video.mp4},
+  url={https://ieeexplore.ieee.org/document/9733561}
 }
