add phd thesis slides

--- a/pub.bib
+++ b/pub.bib
@@ -518,3 +518,13 @@ location = {Denver, Colorado},
 series = {MHV '22}
 }
 
+@thesis{phd:thesis:2021_22,
+  author      = {Steve Göring},
+  month       = {05},
+  day = {18},
+  title       = {{Data-Driven Visual Quality Estimation Using Machine Learning}},
+  type        = {PhD thesis},
+  year        = {2022},
+  note = {soon to be published},
+  slides = {./pdfs/2022/phd_presentation.pdf},
+}
