add url to phd thesis

--- a/bibs/phd_thesis_2021_22.bib
+++ b/bibs/phd_thesis_2021_22.bib
@@ -5,5 +5,5 @@
   title       = {{Data-Driven Visual Quality Estimation Using Machine Learning}},
   type        = {PhD thesis},
   year        = {2022},
-  note = {soon to be published},
+  url = {https://doi.org/10.22032/dbt.52210},
 }
