--- a/pub.bib
+++ b/pub.bib
@@ -525,6 +525,6 @@ series = {MHV '22}
   title       = {{Data-Driven Visual Quality Estimation Using Machine Learning}},
   type        = {PhD thesis},
   year        = {2022},
-  note = {soon to be published},
+  url = {https://doi.org/10.22032/dbt.52210},
   slides = {./pdfs/2022/phd_presentation.pdf},
 }
