--- a/pub.bib
+++ b/pub.bib
@@ -528,3 +528,15 @@ series = {MHV '22}
   url = {https://doi.org/10.22032/dbt.52210},
   slides = {./pdfs/2022/phd_presentation.pdf},
 }
+
+@ARTICLE{rao2022avqbits,
+  author={Ramachandra Rao, Rakesh Rao and Göring, Steve and Raake, Alexander},
+  journal={IEEE Access},
+  title={AVQBits--Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications},
+  year={2022},
+  volume={10},
+  number={},
+  pages={80321-80351},
+  doi={10.1109/ACCESS.2022.3195527},
+  url={https://ieeexplore.ieee.org/document/9846967}
+}
