--- a/pub.bib
+++ b/pub.bib
@@ -532,7 +532,7 @@ series = {MHV '22}
 @ARTICLE{rao2022avqbits,
   author={Ramachandra Rao, Rakesh Rao and Göring, Steve and Raake, Alexander},
   journal={IEEE Access},
-  title={AVQBits--Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications},
+  title={AVQBits-Adaptive Video Quality Model Based on Bitstream Information for Various Video Applications},
   year={2022},
   volume={10},
   number={},
