--- a/bibs/singla2021.bib
+++ b/bibs/singla2021.bib
@@ -3,7 +3,7 @@
   author={Ashutosh Singla and Steve G{\"o}ring and Dominik Keller and Rakesh Rao Ramachandra Rao and Stephan Fremerey and  Alexander Raake},
   year={2021},
   booktitle={IEEE Virtual Reality and 3D User Interfaces (VR)},
-  url={https://conferences.computer.org/vrpub/pdfs/VR2021-2AyvgnPUHcYon9QQHz6BPD/255600a198/255600a198.pdf}
+  url={https://ieeexplore.ieee.org/abstract/document/9417683/}
 }
 
 
