--- a/pub.bib
+++ b/pub.bib
@@ -540,3 +540,13 @@ series = {MHV '22}
   doi={10.1109/ACCESS.2022.3195527},
   url={https://ieeexplore.ieee.org/document/9846967}
 }
+
+
+@ARTICLE{stoll2023automatic,
+  author={Eckhard Stoll, Stephan Breide, Steve Göring, Alexander Raake},
+  journal={IEEE Access},
+  title={Modelling of an automatic vision mixer with human characteristics for multi-camera theater recordings},
+  year={2023},
+  number={},
+  note={to appear}
+}
