--- a/bibs/stoll2023automatic.bib
+++ b/bibs/stoll2023automatic.bib
@@ -3,6 +3,10 @@
   journal={IEEE Access},
   title={Modelling of an automatic vision mixer with human characteristics for multi-camera theater recordings},
   year={2023},
+  volume={11},
   number={},
-  note={to appear}
+  pages={18714-18726},
+  doi={10.1109/ACCESS.2023.3245804},
+  url={https://doi.org/10.1109/ACCESS.2023.3245804}
 }
+
