add a new publication;)

--- a/pub.bib
+++ b/pub.bib
@@ -554,3 +554,10 @@ series = {MHV '22}
   url={https://doi.org/10.1109/ACCESS.2023.3245804}
 }
 
+@article{goeringrao2023crowd,
+  title={Quality Assessment of Higher Resolution Images and Videos with Remote Testing},
+  author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
+  journal={Quality and User Experience (QUEX)},
+  year={2023},
+  note={to appear}
+}
