--- a/bibs/goeringrao2023crowd.bib
+++ b/bibs/goeringrao2023crowd.bib
@@ -3,5 +3,6 @@
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   journal={Quality and User Experience (QUEX)},
   year={2023},
-  note={to appear}
+  volume={8},
+  doi={10.1007/s41233-023-00055-6}
 }
