--- a/pub.bib
+++ b/pub.bib
@@ -559,5 +559,6 @@ series = {MHV '22}
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   journal={Quality and User Experience (QUEX)},
   year={2023},
-  note={to appear}
+  volume={8},
+  doi={10.1007/s41233-023-00055-6}
 }
