--- a/bibs/goeringrao2023crowd.bib
+++ b/bibs/goeringrao2023crowd.bib
@@ -4,5 +4,6 @@
   journal={Quality and User Experience (QUEX)},
   year={2023},
   volume={8},
-  doi={10.1007/s41233-023-00055-6}
+  doi={10.1007/s41233-023-00055-6},
+  url={https://link.springer.com/article/10.1007/s41233-023-00055-6}
 }
