--- a/bibs/goering2023ai.bib
+++ b/bibs/goering2023ai.bib
@@ -2,5 +2,7 @@
   title={Analysis of Appeal for realistic AI-generated Photos},
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Rasmus Merten and Alexander Raake},
   journal={IEEE Access},
-  year={2023}
+  year={2023},
+  url={https://doi.org/10.1109/ACCESS.2023.3267968},
+  doi={10.1109/ACCESS.2023.3267968}
 }
