--- a/pub.bib
+++ b/pub.bib
@@ -570,5 +570,8 @@ series = {MHV '22}
   journal={IEEE Access},
   year={2023},
   url={https://doi.org/10.1109/ACCESS.2023.3267968},
+  volume={11},
+  number={},
+  pages={38999-39012},
   doi={10.1109/ACCESS.2023.3267968}
 }
