--- a/pub.bib
+++ b/pub.bib
@@ -573,5 +573,5 @@ series = {MHV '22}
   volume={11},
   number={},
   pages={38999-39012},
-  doi={10.1109/ACCESS.2023.3267968}
+  doi={10.1109/ACCESS.2023.3267968},
 }
