--- a/bibs/goering2023ai.bib
+++ b/bibs/goering2023ai.bib
@@ -1,4 +1,4 @@
-@inproceedings{goering2023ai,
+@article{goering2023ai,
   title={Analysis of Appeal for realistic AI-generated Photos},
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Rasmus Merten and Alexander Raake},
   journal={IEEE Access},
