--- a/pub.bib
+++ b/pub.bib
@@ -564,7 +564,7 @@ series = {MHV '22}
   url={https://link.springer.com/article/10.1007/s41233-023-00055-6}
 }
 
-@inproceedings{goering2023ai,
+@article{goering2023ai,
   title={Analysis of Appeal for realistic AI-generated Photos},
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Rasmus Merten and Alexander Raake},
   journal={IEEE Access},
