--- a/pub.bib
+++ b/pub.bib
@@ -575,3 +575,16 @@ series = {MHV '22}
   pages={38999-39012},
   doi={10.1109/ACCESS.2023.3267968},
 }
+
+@inproceedings{goering2023aiquality,
+  author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
+  title="Appeal and quality assessment for AI-generated images",
+  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  year={2023}
+}
+
+@inproceedings{goering2023ruleext,
+  author={Steve {G{\"o}ring} and Rasmus Merten and Alexander Raake},
+  title="DNN-based Photography Rule Prediction using Photo Tags",
+  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+}
