--- a/bibs/goering2023aiquality.bib
+++ b/bibs/goering2023aiquality.bib
@@ -2,6 +2,7 @@
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="Appeal and quality assessment for AI-generated images",
   booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
-  year={2023}
+  year={2023},
+  poster = {./pdfs/2023/final_ai_poster.pdf},
 }
 
