--- a/bibs/goering2023ruleext.bib
+++ b/bibs/goering2023ruleext.bib
@@ -2,4 +2,5 @@
   author={Steve {G{\"o}ring} and Rasmus Merten and Alexander Raake},
   title="DNN-based Photography Rule Prediction using Photo Tags",
   booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  poster = {./pdfs/2023/final_rule_poster.pdf},
 }
