--- a/pub.bib
+++ b/pub.bib
@@ -580,11 +580,13 @@ series = {MHV '22}
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="Appeal and quality assessment for AI-generated images",
   booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
-  year={2023}
+  year={2023},
+  poster = {./pdfs/2023/final_ai_poster.pdf},
 }
 
 @inproceedings{goering2023ruleext,
   author={Steve {G{\"o}ring} and Rasmus Merten and Alexander Raake},
   title="DNN-based Photography Rule Prediction using Photo Tags",
   booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  poster = {./pdfs/2023/final_rule_poster.pdf},
 }
