--- a/bibs/goering2023ruleext.bib
+++ b/bibs/goering2023ruleext.bib
@@ -1,6 +1,9 @@
 @inproceedings{goering2023ruleext,
   author={Steve {G{\"o}ring} and Rasmus Merten and Alexander Raake},
   title="DNN-based Photography Rule Prediction using Photo Tags",
-  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  booktitle="15th International Conference on Quality of Multimedia Experience (QoMEX)",
   poster = {./pdfs/2023/final_rule_poster.pdf},
+  year={2023},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction_extension}
 }
+
