--- a/bibs/rao2022avqbits.bib
+++ b/bibs/rao2022avqbits.bib
@@ -7,7 +7,8 @@
   number={},
   pages={80321-80351},
   doi={10.1109/ACCESS.2022.3195527},
-  url={https://ieeexplore.ieee.org/document/9846967}
+  url={https://ieeexplore.ieee.org/document/9846967},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/p1204_3_extensions}
 }
 
 
