--- a/pub.bib
+++ b/pub.bib
@@ -538,7 +538,8 @@ series = {MHV '22}
   number={},
   pages={80321-80351},
   doi={10.1109/ACCESS.2022.3195527},
-  url={https://ieeexplore.ieee.org/document/9846967}
+  url={https://ieeexplore.ieee.org/document/9846967},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/p1204_3_extensions}
 }
 
 
@@ -561,7 +562,8 @@ series = {MHV '22}
   year={2023},
   volume={8},
   doi={10.1007/s41233-023-00055-6},
-  url={https://link.springer.com/article/10.1007/s41233-023-00055-6}
+  url={https://link.springer.com/article/10.1007/s41233-023-00055-6},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/image_quality_test}
 }
 
 @article{goering2023ai,
@@ -574,19 +576,33 @@ series = {MHV '22}
   number={},
   pages={38999-39012},
   doi={10.1109/ACCESS.2023.3267968},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/avt_ai_images}
 }
 
 @inproceedings{goering2023aiquality,
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="Appeal and quality assessment for AI-generated images",
-  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  booktitle="15th International Conference on Quality of Multimedia Experience (QoMEX)",
   year={2023},
   poster = {./pdfs/2023/final_ai_poster.pdf},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/avt_ai_images}
 }
 
 @inproceedings{goering2023ruleext,
   author={Steve {G{\"o}ring} and Rasmus Merten and Alexander Raake},
   title="DNN-based Photography Rule Prediction using Photo Tags",
-  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  booktitle="15th International Conference on Quality of Multimedia Experience (QoMEX)",
   poster = {./pdfs/2023/final_rule_poster.pdf},
+  year={2023},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction_extension}
+}
+
+@article{goering2023imageappeal,
+  title={Image Appeal Revisited: Analysis, new Dataset and Prediction Models},
+  author={Steve G\"oring and Alexander Raake},
+  journal={IEEE Access},
+  year={2023},
+  publisher={IEEE},
+  note={to appear},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
