--- a/bibs/goering2023ai.bib
+++ b/bibs/goering2023ai.bib
@@ -8,5 +8,6 @@
   number={},
   pages={38999-39012},
   doi={10.1109/ACCESS.2023.3267968},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/avt_ai_images}
 }
 
