--- a/bibs/goering2023aiquality.bib
+++ b/bibs/goering2023aiquality.bib
@@ -1,8 +1,9 @@
 @inproceedings{goering2023aiquality,
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="Appeal and quality assessment for AI-generated images",
-  booktitle="15th Int. Conference on Quality of Multimedia Experience (QoMEX)",
+  booktitle="15th International Conference on Quality of Multimedia Experience (QoMEX)",
   year={2023},
   poster = {./pdfs/2023/final_ai_poster.pdf},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/avt_ai_images}
 }
 
