--- a/bibs/goering2023imageappeal.bib
+++ b/bibs/goering2023imageappeal.bib
@@ -5,5 +5,9 @@
   year={2023},
   publisher={IEEE},
   note={to appear},
+  volume={11},
+  number={},
+  pages={69563-69585},
+  doi={10.1109/ACCESS.2023.3292588},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
