--- a/pub.bib
+++ b/pub.bib
@@ -604,5 +604,9 @@ series = {MHV '22}
   year={2023},
   publisher={IEEE},
   note={to appear},
+  volume={11},
+  number={},
+  pages={69563-69585},
+  doi={10.1109/ACCESS.2023.3292588},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
