--- a/bibs/goering2023imageappeal.bib
+++ b/bibs/goering2023imageappeal.bib
@@ -8,5 +8,6 @@
   number={},
   pages={69563-69585},
   doi={10.1109/ACCESS.2023.3292588},
+  url={https://doi.org/10.1109/ACCESS.2023.3292588},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
