--- a/pub.bib
+++ b/pub.bib
@@ -607,5 +607,6 @@ series = {MHV '22}
   number={},
   pages={69563-69585},
   doi={10.1109/ACCESS.2023.3292588},
+  url={https://doi.org/10.1109/ACCESS.2023.3292588},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
