--- a/pub.bib
+++ b/pub.bib
@@ -579,6 +579,13 @@ series = {MHV '22}
   code={https://github.com/Telecommunication-Telemedia-Assessment/avt_ai_images}
 }
 
+@inproceedings{immohr2023proof,
+    author = {Felix Immohr and Gareth Rendle and Annika Neidhardt and Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Stephanie {Arevalo Arboleda} and Bernd Froehlich and Alexander Raake},
+    title = {Proof-of-Concept Study to Evaluate the Impact of Spatial Audio on Social Presence and User Behavior in Multi-Modal VR Communication},
+    booktitle="ACM International Conference on Interactive Media Experiences (IMX)",
+    year = {2023},
+}
+
 @inproceedings{goering2023aiquality,
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="Appeal and quality assessment for AI-generated images",
@@ -595,6 +602,20 @@ series = {MHV '22}
   poster = {./pdfs/2023/final_rule_poster.pdf},
   year={2023},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal_rule_prediction_extension}
+}
+
+@inproceedings{rao2023long,
+    author = {Rakesh Rao Ramachandra Rao and Silvio Borer and David Lindero and Steve G\"oring and Alexander Raake},
+    title = {PNATS-UHD-1-Long: An Open Video Quality Dataset for Long Sequences for HTTP-based Adaptive Streaming QoE Assessment},
+    booktitle="15th International Conference on Quality of Multimedia Experience (QoMEX)",
+    year = {2023},
+}
+
+@inproceedings{rao2023VQA,
+    author = {Rakesh Rao Ramachandra Rao and Steve G\"oring and Bassem Elmeligy and Alexander Raake},
+    title = {AVT-VQDB-UHD-1-Appeal: A UHD-1/4K Open Dataset for Video Quality and Appeal Assessment Using Modern Video Codecs},
+    booktitle="25th IEEE International Workshop on Multimedia Signal Processing (MMSP)",
+    year = {2023},
 }
 
 @article{goering2023imageappeal,
