--- a/pub.bib
+++ b/pub.bib
@@ -631,3 +631,15 @@ series = {MHV '22}
   url={https://doi.org/10.1109/ACCESS.2023.3292588},
   code={https://github.com/Telecommunication-Telemedia-Assessment/sophoappeal}
 }
+
+@article{stoll2023auto,
+  title={Automatic Camera Selection, Shot Size, and Video Editing in Theater Multi-Camera Recordings},
+  author={Eckhard Stoll, Stephan Breide, Steve Göring, Alexander Raake},
+  journal={IEEE Access},
+  year={2023},
+  volume={11},
+  number={},
+  pages={96673-96692},
+  doi={10.1109/ACCESS.2023.3311256},
+  url={https://doi.org/10.1109/ACCESS.2023.3311256}
+}
