--- a/pub.bib
+++ b/pub.bib
@@ -643,3 +643,12 @@ series = {MHV '22}
   doi={10.1109/ACCESS.2023.3311256},
   url={https://doi.org/10.1109/ACCESS.2023.3311256}
 }
+
+@article{friese20236g,
+  title={True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G},
+  author={Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss†, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter},
+    booktitle="2023 2nd International Conference on 6G Networking (6GNet) ",
+    year = {2023},
+}
+
+
