--- a/pub.bib
+++ b/pub.bib
@@ -647,8 +647,15 @@ series = {MHV '22}
 @article{friese20236g,
   title={True 3D Holography: A Communication Service of Tomorrow and Its Requirements for a New Converged Cloud And Network Architecture on the Path to 6G},
   author={Ingo Friese, Mandy Galkow-Schneider, Louay Bassbouss†, Alexander Zoubarev, Andy Neparidze, Sergiy Melnyk, Qiuheng Zhou, Hans D. Schotten, Tobias Pfandzelter, David Bermbach, Arndt Kritzner, Enrico Zschau, Prasenjit Dhara, Steve Göring, William Menz, Alexander Raake, Wolfgang Rüther-Kindel, Fabian Quaeck, Nick Stuckert, Robert Vilter},
-    booktitle="2023 2nd International Conference on 6G Networking (6GNet) ",
-    year = {2023},
+  booktitle="2nd International Conference on 6G Networking (6GNet) ",
+  year = {2023},
+  note={to appear}
 }
 
-
+@article{singla2023point,
+  title={Subjective Quality Evaluation of Point Clouds using Remote Testing},
+  author={Ashutosh Singla, Shuang Wang, Steve Göring, Rakesh Rao Ramachandra Rao, Irene Viola, Pablo Cesar, Alexander Raake},
+  booktitle="2nd International Workshop on Interactive Extended Reality (IXR) ",
+  year = {2023},
+  note={to appear}
+}
